--- a/coo.opam
+++ b/coo.opam
@@ -12,6 +12,7 @@ bug-reports: "https://github.com/username/reponame/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.16"}
+  "js_of_ocaml-compiler" {>= "5.6.0"}
   "odoc" {with-doc}
 ]
 build: [
