--- a/example/dune
+++ b/example/dune
@@ -4,12 +4,20 @@
  (modes byte))
 
 (rule
- (targets foo.c)
- (mode promote)
+ (targets foo.unformatted.c)
  (action
   (with-stdout-to
    %{targets}
    (run %{bin:c_of_ocaml} %{dep:foo.bc}))))
+
+(rule
+ (target foo.c)
+ (mode promote)
+ (deps foo.unformatted.c)
+ (action
+  (with-stdout-to
+   %{target}
+   (run clang-format %{deps}))))
 
 (alias
  (name default)
