--- a/test/dune
+++ b/test/dune
@@ -1,2 +1,6 @@
-(test
- (name test_coo))
+(library
+ (name test_coo)
+ (libraries coo async core core_unix expect_test_helpers_async)
+ (preprocess
+  (pps ppx_jane))
+ (inline_tests))
