--- a/test/dune
+++ b/test/dune
@@ -5,6 +5,6 @@
   (pps ppx_jane))
  (inline_tests
   (deps
-   (file ../lib/runtime/runtime.c)
-   (glob_files_rec ../example/stdlib/**)
-   (glob_files_rec ../example/stdlib/.stdlib.objs/byte/*.cmi))))
+   (file ../runtime/runtime.c)
+   (glob_files_rec ../runtime/stdlib/**)
+   (glob_files_rec ../runtime/stdlib/.stdlib.objs/byte/*.cmi))))
