--- a/calc/cube/dune
+++ b/calc/cube/dune
@@ -1,4 +1,4 @@
-(include ../common.dune)
+(include ../../common.dune)
 
 (executable
  (name main)
@@ -11,7 +11,7 @@
  (target main.c.exe)
  (deps main.c)
  (action
-  (run %{cc} -Og -g -o main.c.exe %{deps})))
+  (run %{cc} -ansi -Og -g -o main.c.exe %{deps})))
 
 (alias
  (name default)
