--- a/calc/hello_world/makefile
+++ b/calc/hello_world/makefile
@@ -5,6 +5,6 @@ COMPRESSED = NO
 SRCDIR = .
 BINDIR = .
 
-CFLAGS = -Wall -Wextra -Oz -Wno-unused-parameter -Wno-unused-parameter -Wno-unused-variable -Wno-unused-label
+CFLAGS = -Wall -Wextra -O3 -Wno-unused-parameter -Wno-unused-parameter -Wno-unused-variable -Wno-unused-label
 
 include $(shell cedev-config --makefile)
